--- a/app/src/main/res/layout/ssom_list_item.xml
+++ b/app/src/main/res/layout/ssom_list_item.xml
@@ -36,6 +36,7 @@
         android:layout_marginLeft="30.2dp"
         android:layout_toRightOf="@id/icon_list_r">
         <TextView
+            android:id="@+id/list_text_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10sp"
