--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,4 +6,22 @@
 
     </style>
 
+    <style name="ssom_font_16_greenblue" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/greenblue</item>
+        <item name="android:typeface">monospace</item>
+    </style>
+
+    <style name="ssom_font_16_redpink" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/redpink</item>
+        <item name="android:typeface">monospace</item>
+    </style>
+
+    <style name="ssom_font_16_greywarm" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/greywarm</item>
+        <item name="android:typeface">monospace</item>
+    </style>
+
 </resources>
