--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ssomcompany.ssomclient.WriteActivity">
+    tools:context=".post.WriteActivity">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -239,7 +239,7 @@
             android:id="@+id/write_icon_heart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/icon_heart_w"/>
+            android:src="@drawable/icon_heart"/>
         <TextView
             android:layout_toRightOf="@id/write_icon_heart"
             android:layout_marginLeft="9dp"
