--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -191,7 +191,7 @@
                     android:id="@+id/icon_heart"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/icon_heart_w"
+                    android:src="@drawable/icon_heart"
                     android:layout_centerVertical="true"/>
                 <TextView
                     android:layout_width="wrap_content"
