--- a/app/src/main/res/layout/fragment_ssom_list.xml
+++ b/app/src/main/res/layout/fragment_ssom_list.xml
@@ -4,54 +4,6 @@
     android:layout_height="match_parent"
     tools:context="com.ssomcompany.ssomclient.SsomListFragment">
 
-    <LinearLayout
-        android:id="@+id/tab_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/tab_give_tv"
-                style="@style/ssom_font_16_greenblue"
-                android:layout_width="180dp"
-                android:layout_height="50dp"
-                android:gravity="center"
-                android:text="@string/title_tab_give"
-                />
-            
-            <ImageView
-                android:id="@+id/tab_give_bottom_bar"
-                android:layout_width="180dp"
-                android:layout_height="3dp"
-                android:layout_gravity="bottom"
-                android:background="@color/greenblue"/>
-        </FrameLayout>
-
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/tab_take_tv"
-                style="@style/ssom_font_16_greywarm"
-                android:layout_width="180dp"
-                android:layout_height="50dp"
-                android:gravity="center"
-                android:text="@string/title_tab_take"
-                />
-
-            <ImageView
-                android:id="@+id/tab_take_bottom_bar"
-                android:layout_width="180dp"
-                android:layout_height="3dp"
-                android:layout_gravity="bottom"
-                android:background="@color/redpink"
-                android:visibility="gone"/>
-        </FrameLayout>
-    </LinearLayout>
-
     <ImageView
         android:id="@+id/bg_list_bot"
         android:layout_width="wrap_content"
@@ -60,8 +12,7 @@
         android:src="@drawable/bg_list_bot"/>
     <ListView android:id="@android:id/list" android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:layout_above="@id/bg_list_bot"
-        android:layout_below="@id/tab_layout"/>
+        android:layout_above="@id/bg_list_bot"/>
 
     <TextView android:id="@android:id/empty" android:layout_width="match_parent"
         android:layout_height="match_parent" android:gravity="center"
