--- a/app/src/main/res/layout/ssom_toolbar.xml
+++ b/app/src/main/res/layout/ssom_toolbar.xml
@@ -5,12 +5,12 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="61dp"
-    android:background="@android:color/white"
+    android:background="@color/white"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     app:contentInsetLeft="0dp"
     app:contentInsetStart="0dp"
-    android:layout_alignParentTop="true"
-    >
+    android:layout_alignParentTop="true" >
+
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="61dp"
@@ -20,8 +20,9 @@
             android:id="@+id/lnb_menu_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:layout_marginTop="22dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="12dp"
+            android:padding="10dp"
             android:src="@drawable/icon_top_menu"/>
         <LinearLayout
             android:id="@+id/toggle_bg"
@@ -31,58 +32,90 @@
             android:layout_marginTop="15dp"
             android:padding="2dp"
             android:background="@drawable/toggle_bg_w">
-        <TextView
-            android:id="@+id/toggle_s_map"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/toggle_s_map"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/toggle_sel_b"
+                android:textSize="16sp"
+                android:text="MAP"
+                android:textColor="@color/white"
+                android:gravity="center"/>
+            <TextView
+                android:id="@+id/toggle_s_list"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/toggle_sel_b"
+                android:textSize="16sp"
+                android:text="LIST"
+                android:textColor="@color/white"
+                android:gravity="center"
+                android:visibility="invisible"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/chat_layout"
+            android:layout_width="34dp"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/toggle_bg"
-            android:layout_alignTop="@+id/toggle_bg"
-            android:background="@drawable/toggle_sel_b"
-            android:textSize="16sp"
-            android:text="MAP"
-            android:textColor="@android:color/white"
-            android:gravity="center"/>
-        <TextView
-            android:id="@+id/toggle_s_list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignRight="@id/toggle_bg"
-            android:layout_alignTop="@+id/toggle_bg"
-            android:background="@drawable/toggle_sel_b"
-            android:textSize="16sp"
-            android:text="LIST"
-            android:textColor="@android:color/white"
-            android:gravity="center"
-            android:visibility="invisible"/>
-    </LinearLayout>
-        <ImageView
-            android:id="@+id/chat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="14dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginTop="11dp"
+            android:layout_marginRight="6dp"
             android:layout_alignParentRight="true"
-            android:src="@drawable/icon_chat_black"/>
-        <ImageView
-            android:id="@+id/chat_on"
-            android:layout_width="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/chat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="1.5dp"
+                android:src="@drawable/icon_chat"/>
+
+            <TextView
+                android:id="@+id/chat_count"
+                style="@style/ssom_font_12_greywarm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="5"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="38.3dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="14dp"
-            android:layout_marginRight="15dp"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/icon_chat_on"/>
-        <ImageView
-            android:id="@+id/heart_black"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="30dp"
-            android:layout_marginTop="14dp"
-            android:layout_toLeftOf="@id/chat_on"
-            android:src="@drawable/icon_heart_black"/>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:background="@drawable/toolbar_dropshadow"
-            android:layout_alignParentBottom="true"/>
+            android:layout_marginRight="4.2dp"
+            android:layout_marginTop="11dp"
+            android:layout_toLeftOf="@id/chat_layout"
+            android:orientation="vertical">
+
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal">
+
+                <ImageView
+                    android:id="@+id/heart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:src="@drawable/icon_heart"/>
+
+                <TextView
+                    android:id="@+id/heart_count"
+                    style="@style/roboto_font_12_white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="5"/>
+            </FrameLayout>
+
+            <TextView
+                android:id="@+id/heart_refill_time"
+                style="@style/ssom_font_12_greywarm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="02:10"/>
+        </LinearLayout>
     </RelativeLayout>
+
 </android.support.v7.widget.Toolbar>
