--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,18 @@
 
     </style>
 
+    <style name="ssom_font_12_greywarm" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/greywarm</item>
+        <item name="android:typeface">monospace</item>
+    </style>
+
+    <style name="roboto_font_12_white" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:typeface">monospace</item>
+    </style>
+
     <style name="ssom_font_16_greenblue" parent="@android:style/TextAppearance.Medium">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/greenblue</item>
@@ -24,4 +36,9 @@
         <item name="android:typeface">monospace</item>
     </style>
 
+    <style name="ssom_font_16_greyish_brown" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/greyish_brown</item>
+        <item name="android:typeface">monospace</item>
+    </style>
 </resources>
