--- a/app/src/main/res/layout/activity_intro2.xml
+++ b/app/src/main/res/layout/activity_intro2.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_main_bw"
-    tools:context="com.ssomcompany.ssomclient.Intro2Activity">
+    tools:context=".activity.Intro2Activity">
 
     <ImageView
         android:id="@+id/intro_slogan"
