--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -37,10 +37,10 @@
 
                     <ImageView
                         android:id="@+id/tab_give_bottom_bar"
-                        android:layout_width="180dp"
-                        android:layout_height="3dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="bottom"
-                        android:background="@color/greenblue"/>
+                        android:src="@drawable/tab_bottom_bar_g"/>
                 </FrameLayout>
 
                 <FrameLayout
@@ -57,10 +57,10 @@
 
                     <ImageView
                         android:id="@+id/tab_take_bottom_bar"
-                        android:layout_width="180dp"
-                        android:layout_height="3dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="bottom"
-                        android:background="@color/redpink"
+                        android:src="@drawable/tab_bottom_bar_r"
                         android:visibility="gone"/>
                 </FrameLayout>
             </LinearLayout>
@@ -98,7 +98,7 @@
     <fragment android:id="@+id/navigation_drawer"
         android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:name="com.ssomcompany.ssomclient.NavigationDrawerFragment"
+        android:name="com.ssomcompany.ssomclient.fragment.NavigationDrawerFragment"
         tools:layout="@layout/fragment_navigation_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
