--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="com.ssomcompany.ssomclient.DetailFragment"
+    android:layout_height="match_parent" tools:context=".fragment.DetailFragment"
     android:background="#B0000000"
     >
 
