--- a/app/src/main/res/layout/fragment_ssom_grid.xml
+++ b/app/src/main/res/layout/fragment_ssom_grid.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ssomcompany.ssomclient.SsomListFragment">
+    tools:context=".fragment.SsomListFragment">
 
     <GridView android:id="@android:id/list" android:layout_width="match_parent"
         android:layout_height="match_parent" android:numColumns="2" />
