--- a/app/src/main/res/layout/layout_write.xml
+++ b/app/src/main/res/layout/layout_write.xml
@@ -49,12 +49,12 @@
 
     <ImageView
         android:id="@+id/btn_write"
-        android:layout_width="74.9dp"
-        android:layout_height="74.9dp"
-        android:background="@color/mainblack"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="10.1dp"
-        android:layout_marginRight="10.1dp"/>
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
+        android:src="@drawable/btn_write"/>
 
 </RelativeLayout>
